fix: bottom sheet is hidden under chrome mobile app bar

--- a/styles/_bottom-sheet.scss
+++ b/styles/_bottom-sheet.scss
@@ -10,7 +10,9 @@
   position: fixed;
   bottom: 0;
   right: 0;
+  // TODO: Use new units where possible https://www.youtube.com/watch?v=Xy9ZXRRgpLk&t=982s
   height: calc(100vh - 36px);
+  max-height: -webkit-fill-available;
   overflow-y: hidden;
   border-radius: 12px 12px 0 0;
   animation: slide-up 300ms ease-out;
